@@ -11,7 +11,7 @@
 
 	NOTE: ancient versions of yacc reject // end-of-line comments
 
-	$Id: hackt-parse.yy.in,v 1.37 2008/05/06 17:43:07 fang Exp $
+	$Id: hackt-parse.yy.in,v 1.38 2008/05/20 19:50:56 fang Exp $
 	This file was formerly known as:
 	Id: hackt-parse.yy,v 1.2 2005/11/10 02:13:09 fang Exp
 	Id: art++-parse.yy,v 1.25 2005/07/20 21:00:59 fang Exp
@@ -690,6 +690,8 @@ yyfreestacks(const short* yyss, const short* yyssp,
 %type	<_expr>	prs_expr prs_paren_expr prs_unary_expr
 %type	<_expr> prs_not prs_and prs_or
 %type	<_expr> prs_and_loop prs_or_loop
+%type	<_expr> prs_literal_param
+%type	<_expr_list> prs_literal_params prs_literal_params_in_angles_optional
 %type	<_node_position>	prs_arrow
 %type	<_node_position>	dir
 %type	<_spec_body>		lang_spec
@@ -2433,8 +2435,27 @@ prs_literal_base
 
 /* the optional expr-list are transistor sizes */
 prs_literal
-	: prs_literal_base expr_list_in_angles_optional
+	: prs_literal_base prs_literal_params_in_angles_optional
 		{ $$ = $1; $$->attach_parameters($2); }
+	;
+
+prs_literal_params_in_angles_optional
+	: '<' prs_literal_params '>'
+		{ $$ = $2; WRAP_LIST($1, $2, $3); }
+	| { $$ = NULL; }
+	;
+
+prs_literal_params
+	: prs_literal_params ',' prs_literal_param
+		{ $$ = $1; APPEND_LIST($1, $2, $3); }
+	| prs_literal_param
+		{ $$ = new expr_list($1); }
+	;
+prs_literal_param
+	: expr
+/* quick hack to support/ignore flavor parameters (ACT) */
+	| expr ':' INT
+		{ $$ = $1; DELETE_TOKEN($2); DELETE_TOKEN($3); }
 	;
 
 /***
