@@ -1,0 +1,2 @@
+"X.a" & "X.b" -> "X.c"-
+~"X.a" | ~"X.b" -> "X.c"+
